--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=MuseoModerno&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/7e72ffb967.js" crossorigin="anonymous"></script>
-    <title>React App</title>
+    <title>Karimli Rufat</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
